--- a/style.css
+++ b/style.css
@@ -282,7 +282,6 @@ textarea {
   }
 .center {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+ text-align: center;
   width: 50%;
 }
